kubernetes/main/apps/kyverno/kyverno/policies/flux-verify.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-flux-images
  annotations:
    policies.kyverno.io/title: Verify Flux Images
    policies.kyverno.io/category: Flux
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: GitRepository
    policies.kyverno.io/description: >-
      Ensures that container images used to run Flux controllers in the cluster
      are signed with valid Cosign signatures. Prevents the deployment of untrusted
      or potentially compromised Flux images. Protects the integrity and security
      of the Flux deployment process.
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: verify-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "ghcr.io/fluxcd/source-controller:*"
            - "ghcr.io/fluxcd/kustomize-controller:*"
            - "ghcr.io/fluxcd/helm-controller:*"
            - "ghcr.io/fluxcd/notification-controller:*"
            - "ghcr.io/fluxcd/image-reflector-controller:*"
            - "ghcr.io/fluxcd/image-automation-controller:*"
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/fluxcd/*"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: https://rekor.sigstore.dev
